fix the container issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,3 +36,9 @@ section.hero {
   border-color: #fff;
   color: #fff;
 }
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+}
