--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -37,3 +37,9 @@ section.hero {
         color: $pure;
     }
 }
+
+@media (min-width: 1280px) {
+    .container {
+        max-width: 1024px;
+    }
+}
