--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -7,7 +7,7 @@
     <title>Realtime Pizza App</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1/dist/tailwind.min.css" rel="stylesheet">
 
 
     <link rel="stylesheet" href="/css/app.css">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="container mx-auto flex items-center justify-between py-4 px-2">
+    <nav class="container mx-auto flex items-center justify-between py-4">
         <div>
             <img src="/img/logo.png" alt="logo">
         </div>
