--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -38,6 +38,32 @@ section.hero {
     }
 }
 
+.btn-primary {
+    background: $primary;
+    transition: $smooth;
+    &:hover {
+        background: $primary-hover;
+    }
+}
+
+section.cart {
+    background: $secondary;
+    .amount {
+        color: $primary;
+    }
+}
+
+section.login {
+    background: $secondary;
+    min-height: calc(100vh - 86px);
+    a {
+        color: $primary;
+        &:hover {
+            color: $primary-hover;
+        }
+    }
+}
+
 @media (min-width: 1280px) {
     .container {
         max-width: 1024px;
