--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,6 @@
 @import './variables';
+@import '~noty/src/noty.scss';
+@import '~noty/src/themes/mint.scss';
 body {
     font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -36,6 +38,9 @@ section.hero {
         border-color: $pure;
         color: $pure;
     }
+    &:focus {
+        outline: none;
+    }
 }
 
 .btn-primary {
@@ -62,6 +67,11 @@ section.login {
             color: $primary-hover;
         }
     }
+}
+
+.noty_theme__mint {
+    border-radius: 50px!important;
+    padding-left: 8px!important;
 }
 
 @media (min-width: 1280px) {
