--- a/resources/views/customers/orders.ejs
+++ b/resources/views/customers/orders.ejs
@@ -16,8 +16,8 @@
                     <thead>
                         <tr>
                             <th class="px-4 py-2 text-left">Orders</th>
-                            <th class="px-4 py-2 text-left">Address</th>
                             <th class="px-4 py-2 text-left">Phone</th>
+                            <th class="px-4 py-2 text-left">Address</th>
                             <th class="px-4 py-2 text-left">Time</th>
                         </tr>
                     </thead>
@@ -26,16 +26,17 @@
                             <% orders.forEach( (order)=> { %>
                                 <tr>
                                     <td class="border px-4 py-2">
-                                        <a class="link" href="/">
+                                        <a class="link" href="/customer/orders/<%= order._id %>">
                                             <%= order._id %>
                                         </a>
                                     </td>
                                     <td class="border px-4 py-2">
-                                        <%= order.address %>
-                                    </td>
-                                    <td class="border px-4 py-2">
                                         <%= order.phone %>
                                     </td>
+                                    <td class="border px-4 py-2">
+                                        <%= order.address %>
+                                    </td>
+
                                     <td class="border px-4 py-2">
                                         <%= moment(order.createdAt).format('hh:mm: A') %>
                                     </td>
