--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -14,13 +14,18 @@
 
 </head>
 
-<body>
-    <nav class="container mx-auto flex items-center justify-between py-4">
-        <div>
+<body class="mobile">
+    <nav class="container nav-wrapper mx-auto flex items-center justify-between py-4">
+        <div class="brand">
             <a href="/"><img src="/img/logo.png" alt="logo"></a>
         </div>
+        <div class="hamburger flex justify-end">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div>
-            <ul class="flex items-center">
+            <ul class="nav-list flex items-center">
                 <li class="ml-6"><a href="/">Menu</a></li>
                 <!-- <li class="ml-6"><a href="#">Offers</a></li> -->
                 <% if(user){ %>
@@ -35,7 +40,7 @@
                         <% } %>
 
                             <li class="ml-6">
-                                <a href="/cart" class="inline-block px-4 py-2 rounded-full flex items-center">
+                                <a href="/cart" class="cart-style inline-block px-4 py-2 rounded-full flex items-center">
                                     <span id="cartCounter" class="text-white font-bold pr-2"><%= session.cart? session.cart.totalQty : '' %></span>
                                     <img src="/img/cart.png" alt="cart"></a>
                             </li>
